--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
-  background-image: url("darkPlank.svg "); 
+  background-image: url("darkAndLightPlanks.svg"); 
   image-rendering: pixelated;
-  background-repeat: repeat;
-  background-size: 100% ;
+  background-position: unset;
+  background-size: 60%;
   background-color: red;
 }
